# storehealthdash

./: .env.example  .replit  Dockerfile  api.py  app.py  basic_api.py  data_generator.py  database.py  docker-compose.yml  docker-integration-guide.md  docker-quickstart.md  docker-setup-instructions.md  fix_data.py  pyproject.toml  run_api.py
assets/: store_images.py
attached_assets/: Pasted-Project-Brief-for-Replit-AI-Developer-Intuitive-Multi-Store-Convenience-Store-Health-Dashboard-A-1747661668254.txt
components/: ai_assistant.py  chart_styles.py  database_admin.py  employee_analytics.py  global_command.py  rewards_analytics.py  theft_analytics.py  traffic_analytics.py  utils.py
docker/: sceneiq-docker.sh
docker/scripts/: backup.sh
sceneiq_docker/: .dockerignore  Dockerfile  requirements.txt  update-requirements.sh
sceneiq_docker/nginx/conf/: sceneiq.conf
sceneiq_docker/scripts/: restore.sh
tmp_for_zip/: README-SSL.md  README.md  docker-compose-production.yml  docker-compose.yml
tmp_for_zip/init-scripts/: 01-schema.sql  02-sample-data.sql
tmp_for_zip/scripts/: initialize.sh
