[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.51.0",
    "google-generativeai>=0.8.5",
    "gradio>=5.29.1",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "psycopg2-binary>=2.9.10",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
]
